--- a/production/Dockerfile
+++ b/production/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Balazs Szabo <balazs.szabo@gmail.com>
 
 RUN apt-get update -yqq \
   && buildDeps=" \
+    libc-client2007e-dev \
     libmemcached-dev \
     libjpeg62-turbo-dev \
     libpq-dev \
@@ -18,6 +19,7 @@ RUN apt-get update -yqq \
     libxml2-dev \
   " \
   && doNotUninstall=" \
+    libc-client2007e \
     libmemcached11 \
     libmemcachedutil2 \
     libfreetype6 \
